--- a/views/index.dust
+++ b/views/index.dust
@@ -1,4 +1,18 @@
-{>layout/}
-{<content}
-  This is index.dust.
-{/content}
+<!DOCTYPE html>
+<html>
+<head>
+  <title>{title}</title>
+  <link rel='stylesheet' href='/css/style.css' />
+  <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
+</head>
+<body>
+  <h1>{title}</h1>
+  <h3>This is index.dust.</h3>
+
+  <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+  <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
+</body>
+<!--
+{session}
+-->
+</html>
