--- a/views/index.dust
+++ b/views/index.dust
@@ -4,6 +4,7 @@
   <title>Rock, Paper or Scissors</title>
   <link rel='stylesheet' href='/css/style.css' />
   <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
+  <meta name="viewport" content="width=device-width" />
 </head>
 <body>
 
